# tsharp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Main.c  Makefile  Makefile.linux  Makefile.mac  Makefile.unix  Makefile.win  README.md  build.bat  build.ps1  build.sh  clean.ps1  clean.sh  main.cpp  test.ps1  test.sh  tsharp-vscode-v2.0.0-beta1.vsix  tsharp_lexer.g4  tsharp_parser.g4  vcpkg.json
.github/workflows/: antlr_gen.yml
docs/examples/: hello_world.tsharp  hello_world_oop.tsharp
examples/: benchmark.tsharp  classes.tsharp  conway2.tsharp  conways_game_of_life.tsharp  demo.tsharp  dummy.tsharp  dylan.tsharp  dylan_fn_oop.tsharp  functions.tsharp  helloworld.tsharp  int.tsharp  size_demo.tsharp  std_demo.tsharp  test.tsharp  test.txt  test_2.tsharp
grammar/: TSharp.g4
include/: Builtins.h  BytecodeFunction.h  BytecodeModule.h  Chunk.h  ClassValue.h  Compiler.h  ControlFlow.h  Environment.h  ExecutionResult.h  FieldInfo.h  FunctionValue.h  InstanceValue.h  Interpreter.h  MemberInfo.h  ModuleLoader.h  Node.h  OpCode.h  ParameterInfo.h  Program.h  PropertyValue.h  RuntimeModel.h  Token.h  VM.h  Value.h  Variables.h  tsharp_class.h  tsharp_constructor.h  tsharp_field.h  tsharp_function.h  tsharp_listener.h  tsharp_math.h  tsharp_types.h  tsharp_value.h
include/runtime_model/: ClassValue.h  ControlFlow.h  ExecutionResult.h  FieldInfo.h  FunctionValue.h  InstanceValue.h  MemberInfo.h  ParameterInfo.h  PropertyValue.h
src/: Builtins.cpp  Builtins.h  Chunk.cpp  Compiler.cpp  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  ModuleLoader.cpp  Node.c  Program.c  RuntimeModel.h  Token.c  VM.cpp  Value.cpp  Value.h  Variables.c  tsharp_class.cpp  tsharp_constructor.cpp  tsharp_field.cpp  tsharp_function.cpp  tsharp_listener.cpp  tsharp_types.cpp  tsharp_value.cpp
std/collections/: Dictionary.tsharp
std/io/: File.tsharp
std/math/: Matrix2.tsharp  Matrix3.tsharp  Vector2.tsharp  Vector3.tsharp
vs-code-extension/: README.md  language-configuration.json  package-lock.json  package.json  tsharp-vscode-0.2.0.vsix
vs-code-extension/client/: tsconfig.json
vs-code-extension/client/src/: extension.ts
vs-code-extension/server/src/: server.ts
vs-code-extension/snippets/: tsharp.json
vs-code-extension/syntaxes/: tsharp.tmLanguage.json
vs-code-extension/themes/: tsharp-dark-color-theme.json
vs_code_extension/: tsharp-language-v1.0.0-alpha1.vsix
